--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
                     <div class="col-lg-8 h-100 text-center text-lg-right my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item mr-3">
-                                <button class="btn btn-block btn-lg btn-primary">
+                                <a href="https://api.addthis.com/oexchange/0.8/forward/facebook/offer?url=&amp;pubid=ra-5adbf5e96a86c055&amp;ct=1&amp;title=За чистоту Русского языка&amp;pco=tbxnj-1.0" class="btn btn-block btn-lg btn-primary">
                                     <i class="fa fa-facebook fa-2x fa-fw"></i>
-                                </button>
+                                </a>
                             </li>
                             <li class="list-inline-item mr-3">
-                                <button class="btn btn-block btn-lg btn-primary">
+                                <a href="https://api.addthis.com/oexchange/0.8/forward/twitter/offer?url=&amp;pubid=ra-5adbf5e96a86c055&amp;ct=1&amp;title=За чистоту Русского языка&amp;pco=tbxnj-1.0" class="btn btn-block btn-lg btn-primary">
                                     <i class="fa fa-twitter fa-2x fa-fw"></i>
-                                </button>
+                                </a>
                             </li>
                             <li class="list-inline-item">
-                                <button class="btn btn-block btn-lg btn-primary">
-                                    <i class="fa fa-instagram fa-2x fa-fw"></i>
-                                </button>
+                                <a href="https://api.addthis.com/oexchange/0.8/forward/vkontakte/offer?url=&amp;pubid=ra-5adbf5e96a86c055&amp;ct=1&amp;title=За чистоту Русского языка&amp;pco=tbxnj-1.0" class="btn btn-block btn-lg btn-primary">
+                                    <i class="fa fa-vk fa-2x fa-fw"></i>
+                                </a>
                             </li>
                         </ul>
                     </div>
