--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 
         <!-- Стили -->
         <link href="css/landing-page.css" rel="stylesheet">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43030036-7"></script>
+        <script>
+        if(window.location.host != '') {
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-43030036-7');
+        }
+        </script>
     </head>
 
     <body>
@@ -149,5 +161,36 @@
 
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5adbf5e96a86c055"></script>
+
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript" >
+            if(window.location.host != '') {
+                (function (d, w, c) {
+                    (w[c] = w[c] || []).push(function() {
+                        try {
+                            w.yaCounter48640466 = new Ya.Metrika({
+                                id:48640466,
+                                clickmap:true,
+                                trackLinks:true,
+                                accurateTrackBounce:true,
+                                webvisor:true
+                            });
+                        } catch(e) { }
+                    });
+
+                    var n = d.getElementsByTagName("script")[0],
+                        s = d.createElement("script"),
+                        f = function () { n.parentNode.insertBefore(s, n); };
+                    s.type = "text/javascript";
+                    s.async = true;
+                    s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+                    if (w.opera == "[object Opera]") {
+                        d.addEventListener("DOMContentLoaded", f, false);
+                    } else { f(); }
+                })(document, window, "yandex_metrika_callbacks");
+            }
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/48640466" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     </body>
 </html>
