--- a/index.html
+++ b/index.html
@@ -67,12 +67,7 @@
             <div class="container-fluid p-0">
                 <h3 class="mb-4">Вставьте текст</h3>
                 <form action="">
-                  <textarea name="input" id="text" cols="100" rows="15">
-                    Решил тут выставить на продажу свой кроссовер (остался не нужен - сорвались планы на семью, а одному он мне ни к чему). Большой, неуклюжий, страховка, налог, дорогой, ну и пр.. В общем, решил, что хватит С-класса, жутко захотел седан. На вторичку смотреть не люблю, - риск напороться высокий, а рынок этот знаю плохо, да и знакомых на нем нет. Решил пойти к дилерам за свежачком. Кто в теме - знают С-класс и его варианты на рынке. Пока мои аппарат не продан, но средний ценник - около 1 млн., машине всего год, пробег маленький.
-                    С-класс хоть и конская цена, но дешевле, думаю, что-нибудь получится выручить и по деньгам.
-                    Так или иначе, проходит какое-то время, выставляю на продажу, и попутно начинаю ездить по дилерам. Объездил многих, покатался тест-драйвы, выводы для себя сделал.
-                    В общем, каждая поездка к дилеру у меня сводилось примерно к одному диалогу:
-                  </textarea>
+                  <textarea name="input" id="text" cols="100" rows="15" placeholder="Вставьте текст"></textarea>
                 </form>
 
                 <div class="col-md-7 col-lg-7 col-sm-7 col-xl-6 mx-auto">
