--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </script>
     </head>
 
-    <body>
-        <nav class="navbar navbar-light bg-light static-top">
+    <body class="bg-light">
+        <nav class="navbar navbar-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Сохрани Русский Язык</a>
+                <a class="navbar-brand" href="#">Говори Правильно</a>
             </div>
         </nav>
 
@@ -63,7 +63,7 @@
             </div>
         </header>
 
-        <section class="testimonials text-center bg-light" id="cleanup">
+        <section class="testimonials text-center" id="cleanup">
             <div class="container-fluid p-0">
                 <h3 class="mb-4">Вставьте текст</h3>
                 <form action="">
@@ -140,7 +140,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 h-100 text-center right my-auto">
-                        <p class="text-muted small mb-4 mb-lg-0"><a href="https://cyberkolhoz.ru/" title="Кибернетический Колхоз Батмас">&copy; КиберКолхоз "Батмас"</a></p>
+                        <p class="text-muted small mb-4 mb-lg-0"><a href="https://cyberkolhoz.ru/" title='Кибернетический Колхоз "Батмас"'>&copy; КиберКолхоз "Батмас"</a></p>
                     </div>
                 </div>
             </div>
@@ -151,7 +151,7 @@
         <!-- Bootstrap -->
         <script src="vendor/jquery/jquery.min.js"></script>
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="js/words.js" async></script>
+        <script src="js/slovoved.js" async></script>
         <script src="js/app.js" async></script>
 
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
