--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         return
                     } else {
                         localStorage.setItem('slovovedText', 'text');
-                        window.location = window.location.host + '/slovoved.html';
+                        window.location = 'https://' + window.location.host + '/slovoved.html';
                     }
 
                 });
