исправлено обновления текста

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         alert("введите текст");
                         return
                     } else {
-                        localStorage.setItem('slovovedText', 'text');
+                        localStorage.setItem('slovovedText', text);
                         window.location = 'https://' + window.location.host + '/slovoved.html';
                     }
 
