--- a/slovoved.html
+++ b/slovoved.html
@@ -82,7 +82,7 @@
                     <p>
                         <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js"></script>
                         <script src="https://yastatic.net/share2/share.js"></script>
-                        <div class="ya-share2" data-url="//govori-pravilno.ru/app.html" data-services="vkontakte,telegram,viber,twitter,odnoklassniki,lj,whatsapp,facebook"></div>
+                        <div class="ya-share2" data-url="https://govori-pravilno.ru/slovoved.html" data-services="vkontakte,telegram,viber,twitter,odnoklassniki,lj,whatsapp,facebook"></div>
                     </p>
                 </div>
                 <div class="col-md-3">
