--- a/slovoved.html
+++ b/slovoved.html
@@ -86,7 +86,12 @@
                     </p>
                 </div>
                 <div class="col-md-3">
-                    <div style="background: purple; margin-top: 0; width: 250px; height: 80px"></div>
+                    <div style="margin-top: 0; width: 250px; height: 80px;">
+                        <blockquote class="blockquote" style=" border: 1px solid rgba(0,0,0,.1); padding: 5px; border-radius: 0.2em">
+                            <p class="mb-0" style="font-size: 12px;">Мы из всех исторических катастроф вынесли и сохранили в чистоте великий русский язык, он передан нам нашими дедами и отцами…</p>
+                            <footer style="font-size: 12px;" class="text-right blockquote-footer">Василий Шукшин</footer>
+                        </blockquote>
+                    </div>
                 </div>
             </div>
         </section>
