--- a/slovoved.html
+++ b/slovoved.html
@@ -87,8 +87,10 @@
                 <div class="col-md-3">
                     <div style="margin-top: 0; width: 250px; height: 80px;">
                         <blockquote class="blockquote" style=" border: 1px solid rgba(0,0,0,.1); padding: 5px; border-radius: 0.2em">
-                            <p class="mb-0" style="font-size: 12px;">Мы из всех исторических катастроф вынесли и сохранили в чистоте великий русский язык, он передан нам нашими дедами и отцами…</p>
-                            <footer style="font-size: 12px;" class="text-right blockquote-footer">Василий Шукшин</footer>
+                            <!--<p class="mb-0" style="font-size: 12px;">Мы из всех исторических катастроф вынесли и сохранили в чистоте великий русский язык, он передан нам нашими дедами и отцами…</p>-->
+                            <!--<footer style="font-size: 12px;" class="text-right blockquote-footer">Василий Шукшин</footer>-->
+                            <p class="mb-0" style="font-size: 12px;">Употреблять иностранное слово, когда есть равносильное ему русское слово - значит оскорблять и здравый смысл и здравый вкус.</p>
+                            <footer style="font-size: 12px;" class="text-right blockquote-footer">В.Г. Белинский</footer>
                         </blockquote>
                     </div>
                 </div>
